Add Tags api
