# src/adapter/in/http/experiences/cv_types.gen.go
@@ -1,7 +1,7 @@
-// Package gin provides primitives to interact with the openapi HTTP API.
+// Package experiences provides primitives to interact with the openapi HTTP API.
 //
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
-package gin
+package experiences
 
 import (
 	openapi_types "github.com/oapi-codegen/runtime/types"
@@ -51,6 +51,15 @@ type TagArray = []Tag
 type TagArrayType struct {
 	Tags *[]Tag `json:"tags,omitempty"`
 }
+
+// TagResponse A single tag
+type TagResponse struct {
+	Id   openapi_types.UUID `json:"id"`
+	Name string             `json:"name"`
+}
+
+// TagsResponse List of tags
+type TagsResponse = []TagResponse
 
 // ListExperiencesParams defines parameters for ListExperiences.
 type ListExperiencesParams struct {
